# xsref

./: LICENSE  README.md  pixi.toml  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
scripts/: diff_windows_tables.py  list_windows_parquet_diffs.py
src/xsref/: __init__.py  case_generation.py  cpp_generation.py  float_tools.py  initial_reference_tolerances.py  reference_tolerances_other.py  scipy_case_generation.py  tables.py
src/xsref/_reference/: _framework.py  _functions.py
tables/airy/scipy_special_tests/: In_D-DDDD.parquet  In_d-dddd.parquet  Out_D-DDDD.parquet
tables/airye/scipy_special_tests/: In_D-DDDD.parquet  In_d-dddd.parquet  Out_D-DDDD.parquet  Out_d-dddd.parquet
tables/bdtr/scipy_special_tests/: In_ddd-d.parquet  In_dpd-d.parquet  Out_ddd-d.parquet  Out_dpd-d.parquet
tables/bdtrc/scipy_special_tests/: In_ddd-d.parquet  In_dpd-d.parquet  Out_ddd-d.parquet  Out_dpd-d.parquet
tables/bdtri/scipy_special_tests/: In_ddd-d.parquet  In_dpd-d.parquet  Out_ddd-d.parquet  Out_dpd-d.parquet
tables/bei/scipy_special_tests/: In_d-d.parquet  Out_d-d.parquet
tables/beip/scipy_special_tests/: In_d-d.parquet  Out_d-d.parquet
tables/ber/scipy_special_tests/: In_d-d.parquet  Out_d-d.parquet
tables/berp/scipy_special_tests/: In_d-d.parquet  Out_d-d.parquet
tables/besselpoly/scipy_special_tests/: In_ddd-d.parquet  Out_ddd-d.parquet
tables/beta/scipy_special_tests/: In_dd-d.parquet  Out_dd-d.parquet
tables/betainc/scipy_special_tests/: In_ddd-d.parquet  In_fff-f.parquet  Out_ddd-d.parquet  Out_fff-f.parquet
tests/: test_tables.py
(+2694 files in other folders)
