[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xsref"
version = "0.0.0"
license = {file = "LICENSE"}
maintainers = [
            {name = "xsf developers", email = "albert.steppi@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
	     "mpmath==1.3.0",
	     "numpy",
	     "packaging",
	     "polars",
	     "pyarrow",
	     "scipy==1.15.1",
]
readme = "README.md"
